Refactored based on review comments